# Tzuroni_Assignment

./: main.py  package.json  pyproject.toml
gambling-unification/: requirements.txt
gambling-unification/src/gambling_unification/: crew.py
gambling-unification/src/gambling_unification/config/: agents.yaml  tasks.yaml
