[project]
name = "gambling-unification"
version = "0.1.0"
description = "Unified gambling market analysis using CrewAI and Gemini"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "crewai>=0.28.8",
    "litellm>=1.34.25",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "google-generativeai>=0.3.2",
    "pydantic>=2.7.1"
]

[project.urls]
Homepage = "https://github.com/yourusername/gambling-unification"
Repository = "https://github.com/yourusername/gambling-unification.git"

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = find:

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
gambling-unification = "gambling_unification.main:run"